# hpy

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README-gdb.md  README.md  api.md  azure-pipelines.yml  gdb-py.test  pyproject.toml  requirements-autogen.txt  scratch.c  setup.cfg  setup.py  setup_hpy_debug.py  setup_microbench.py  xxx-unsorted-notes.txt
azure-templates/: cache.yml  ccache.yml  cppcheck.yml  python.yml  python2-latest.yml  python3-latest.yml
c_test/: Makefile  test_debug_handles.c
cpython-universal/: setup.py
docs/: Makefile  api.md  api.rst  changelog.rst  conf.py  debug-mode.rst  debugging.rst  environment.yml  index.rst  overview.rst  porting-guide.rst  quickstart.rst  requirements.txt  trace-mode.rst
hpy-api/: MANIFEST.in  setup.py
hpy/devel/rust/hpy-sys/: Cargo.toml  build.rs
hpy/devel/rust/hpy-sys/src/: lib.rs  runtime
microbench/: Makefile  README.md  conftest.py  pixi.toml  print_other_vs_cpy.py  print_tmp_results.py  pyproject.toml  pytest_valgrind.sh  setup.py  test_microbench.py  util.py
microbench/profile/: Makefile  README.md  profile_alloc.py  profile_alloc_and_die.py  profile_allocate_and_collect.py  profile_allocate_tuple.py  profile_method_lookup.py  util.py
microbench/profile_alloc/: README.md  profile_alloc.py
microbench/src/: cpy_simple.c  hpy_simple.c  purepy_simple.py
proof-of-concept/: Makefile  build_and_test.sh  build_wheel_nodeps.sh  hpy.h  pof.c  pofcpp.cpp  requirements.txt  setup.py  test_pof.py  test_pof.sh
src/: api.c  api.h  hpymodule.c
test/: check_py27_compat.py  conftest.py  (+47 more)
(+286 files in other folders)
