[package]
name = "hpy-sys"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.78"

[features]
default = ["abi-universal"]
abi-cpython = []
abi-universal = []
abi-hybrid = []
